// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input Field accepts an onUpdate function 1`] = `
Array [
  Array [
    "H",
  ],
]
`;

exports[`Input Field has an FA icon 1`] = `
<div
  className="input-group"
>
  <input
    autoFocus={undefined}
    className="input-control null null"
    disabled={undefined}
    id="login-name"
    maxLength={undefined}
    onChange={[Function]}
    onKeyPress={[Function]}
    placeholder={undefined}
    readOnly={undefined}
    required={undefined}
    type="text"
    value=""
  />
  <label
    className="input-icon fa fa-gear"
    htmlFor="login-name"
  />
</div>
`;

exports[`Input Field renders 1`] = `
<div
  className="input-group"
>
  <input
    autoFocus={undefined}
    className="input-control null null"
    disabled={undefined}
    id="login-name"
    maxLength={undefined}
    onChange={[Function]}
    onKeyPress={[Function]}
    placeholder={undefined}
    readOnly={undefined}
    required={undefined}
    type="text"
    value=""
  />
</div>
`;
